--- a/style/sass.css
+++ b/style/sass.css
@@ -95,7 +95,7 @@ body::-webkit-scrollbar-thumb {
   z-index: 0;
   animation-name: backfloat;
   animation-duration: 10s;
-  width: calc(1px + 16vw);
+  width: calc(1px + 12vw);
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
@@ -1739,6 +1739,9 @@ p {
     position: absolute;
     z-index: 1;
   }
+  .float__wapp a .botonfloat__wapp img {
+    width: calc(1px + 15vw);
+  }
   .float__wapp a .botonfloat__wapp:hover {
     transform: scale(1.1);
   }
@@ -1757,7 +1760,7 @@ p {
     z-index: 0;
     animation-name: backfloat;
     animation-duration: 10s;
-    width: calc(1px + 35vw);
+    width: calc(1px + 25vw);
     animation-iteration-count: infinite;
     animation-timing-function: linear;
   }
@@ -2685,11 +2688,14 @@ p {
 .body__index .conten_setion_uno {
   position: relative;
   margin: 0px 5em 0px 5em;
+  height: 90vh;
+  display: flex;
+  align-items: center;
 }
 .body__index .conten_setion_uno .titulo_setion_uno {
   display: flex;
   width: 100%;
-  align-items: start;
+  align-items: center;
   flex-direction: column;
 }
 .body__index .conten_setion_uno .titulo_setion_uno h1 {
@@ -2697,7 +2703,7 @@ p {
   margin-top: 0.1em;
   margin-bottom: 0.1em;
   color: #000;
-  text-align: start;
+  text-align: center;
   display: flex;
   flex-direction: column;
 }
@@ -2705,7 +2711,7 @@ p {
   overflow: hidden;
   color: #000000;
   font-family: MargoBeuys;
-  font-size: calc(1px + 10vw);
+  font-size: calc(1px + 5vw);
   font-style: normal;
   font-weight: 400;
   line-height: 100%;
@@ -2714,40 +2720,40 @@ p {
 .body__index .conten_setion_uno .titulo_setion_uno h1 .titulo p {
   transform: translateY(130%);
 }
+.body__index .conten_setion_uno .titulo_setion_uno h1 .titulo p strong {
+  font-family: Gambetta;
+  font-style: italic;
+  font-weight: 500;
+}
 .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
   margin-top: 2em;
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: center;
   align-items: start;
   gap: 2em;
   width: 100%;
   overflow: hidden;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item_img {
-  transform: translateY(130%);
-  width: 8%;
-}
 .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores {
   transform: translateY(130%);
   display: flex;
   flex-direction: column;
-  align-items: start;
-  padding: 20px;
+  align-items: center;
+  padding: 2em 5em;
   flex-direction: column;
   justify-content: center;
-  flex-shrink: 0;
   align-self: stretch;
   border-radius: 10px;
-  background: #f6f6f6;
+  gap: 3em;
 }
 .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .parrafo {
   color: #252525;
-  text-align: start;
+  text-align: center;
   font-family: poppins;
-  font-size: calc(1px + 1vw);
+  font-size: calc(1px + 1.2vw);
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 110%;
   padding-bottom: 10px;
 }
@@ -2756,7 +2762,7 @@ p {
   display: flex;
   flex-direction: row;
   gap: 1em;
-  justify-content: start;
+  justify-content: center;
 }
 .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno .boton_setion_uno_see {
   display: flex;
@@ -2796,100 +2802,6 @@ p {
 }
 .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno .boton_setion_uno_contac:hover {
   cursor: url("../assets/img/ir.svg") 15 10, auto;
-}
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont {
-  transform: translateY(130%);
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  flex-direction: column;
-  width: 130px;
-  padding: 20px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-  align-self: stretch;
-  border-radius: 10px;
-  background: #f6f6f6;
-}
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont h4 {
-  color: #252525;
-  font-family: MargoBeuys;
-  font-size: calc(1px + 2.5vw);
-  font-style: normal;
-  font-weight: 500;
-  line-height: 74%;
-}
-.body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont p {
-  display: flex;
-  padding: 0px;
-  color: #252525;
-  font-family: MargoBeuys;
-  font-size: calc(1px + 1vw);
-  font-style: normal;
-  font-weight: 400;
-}
-.body__index .grilla {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  width: 100%;
-  margin-top: 5em;
-  margin-left: 5em;
-  opacity: 0;
-}
-.body__index .fondo_inicio {
-  display: none;
-  position: absolute;
-  z-index: -10;
-  top: 0px;
-  left: 0px;
-  width: 100vw;
-  height: 120vh;
-  overflow: hidden;
-  background: #ffffff;
-}
-.body__index .fondo_inicio .bold_uno {
-  position: absolute;
-  top: -400px;
-  left: -300px;
-  animation: 60s infinite linear gradienanimate;
-}
-.body__index .fondo_inicio .bold_dos {
-  position: absolute;
-  top: 10px;
-  left: -200px;
-  animation: 60s infinite linear gradienanimate;
-}
-.body__index .fondo_inicio .bold_tres {
-  position: absolute;
-  bottom: -400px;
-  right: -400px;
-  animation: 60s infinite linear reverse gradienanimate;
-}
-.body__index .fondo_inicio .fondo_blur {
-  z-index: 5;
-  width: 100vw;
-  height: 100%;
-  background: repeating-radial-gradient(rgba(255, 255, 255, 0.192) 0 0.0001%, rgba(241, 241, 241, 0.2745098039) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 255, 255, 0.2) 0 0.0001%, rgba(241, 241, 241, 0.2745098039) 0 0.0002%) 40% 40%/3000px 3000px;
-  background-blend-mode: difference;
-  -webkit-backdrop-filter: blur(30px);
-          backdrop-filter: blur(30px);
-}
-.body__index .fondo_inicio .fondo_blur_movil {
-  display: none;
-  z-index: 5;
-  width: 100vw;
-  height: 100%;
-}
-.body__index .fondo_inicio #canvasindex {
-  background: #ffffff;
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
 }
 .body__index .cont_cinta_inicio {
   margin-top: 3em;
@@ -4429,78 +4341,71 @@ p {
   .body__index .conten_setion_uno {
     position: relative;
     margin: 0px 1em 0px 1em;
+    z-index: 99;
+    height: 70vh;
   }
   .body__index .conten_setion_uno .titulo_setion_uno {
     display: flex;
     width: 100%;
-    align-items: center;
-    gap: calc(1px + 0vw);
-    justify-content: none;
+    align-items: start;
+    justify-content: start;
     gap: 1em;
     flex-direction: column;
-    height: 80vh;
+    margin-top: 0.8em;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .titulo {
+  .body__index .conten_setion_uno .titulo_setion_uno h1 {
+    width: 100%;
+    margin-top: 0.1em;
+    margin-bottom: 0.1em;
+    color: #000;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .body__index .conten_setion_uno .titulo_setion_uno h1 .titulo {
     overflow: hidden;
     color: #000000;
     font-family: MargoBeuys;
-    font-size: calc(1px + 15vw);
     font-style: normal;
     font-weight: 400;
-    line-height: 100%;
+    line-height: 150%;
     text-transform: uppercase;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .titulo p {
-    transform: translateY(130%);
+  .body__index .conten_setion_uno .titulo_setion_uno h1 .titulo p {
+    font-size: calc(1px + 9vw);
+    transform: translateY(170%);
+  }
+  .body__index .conten_setion_uno .titulo_setion_uno h1 .titulo p strong {
+    font-family: Gambetta;
+    font-style: italic;
+    font-weight: 500;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 1fr);
     padding: 0px 0px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 0px;
     border-radius: 20px;
     border: 1px solid #fff;
-    background: rgba(255, 255, 255, 0.05);
-    -webkit-backdrop-filter: blur(50px);
-            backdrop-filter: blur(50px);
-  }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item:nth-child(1) {
-    order: 1;
-  }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item:nth-child(2) {
-    order: 4;
-  }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item:nth-child(3) {
-    order: 2;
-  }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item:nth-child(4) {
-    order: 3;
-  }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .item_img {
-    transform: translateY(200%);
-    grid-area: 1/1/3/2;
-    width: 100%;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores {
     transform: translateY(130%);
-    grid-area: 3/1/4/3;
     display: flex;
     align-items: center;
+    padding: 1em 1em;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .parrafo {
     color: #1d1d1d;
     text-align: center;
     font-family: poppins;
-    font-size: calc(1px + 2.5vw);
+    font-size: calc(1px + 3vw);
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    padding-bottom: 10px;
+    padding-bottom: 0px;
     text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno {
@@ -4512,7 +4417,7 @@ p {
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .boton_setion_uno .boton_setion_uno_see {
     display: flex;
     width: 10em;
-    padding: 10px;
+    padding: 5px;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -4521,7 +4426,7 @@ p {
     background: #ffffff;
     color: #000;
     font-family: Gotham;
-    font-size: 15px;
+    font-size: 13px;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
@@ -4535,112 +4440,18 @@ p {
     gap: 10px;
     color: #fff;
     font-family: poppins;
-    font-size: 15px;
+    font-size: 13px;
     font-style: normal;
     font-weight: 300;
     line-height: normal;
     border-radius: 10px;
     background: #141414;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont {
-    transform: translateY(450%);
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    width: 100%;
-  }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont h4 {
-    color: #1d1d1d;
-    font-family: MargoBeuys;
-    font-size: calc(1px + 6vw);
-    font-style: normal;
-    font-weight: 500;
-    line-height: 74%;
-    /* 25.9px */
-    letter-spacing: 0.35px;
-  }
-  .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .contador_cont p {
-    color: #1d1d1d;
-    font-family: poppins;
-    font-size: calc(1px + 3vw);
-    font-style: normal;
-    font-weight: 400;
-    line-height: 100%;
-    /* 15px */
-    letter-spacing: 0.15px;
-  }
-  .body__index .grilla {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    width: 100%;
-    margin-top: 2em;
-    margin-left: 2em;
-  }
-  .body__index .fondo_inicio {
-    position: absolute;
-    z-index: -10;
-    top: 0px;
-    left: 0px;
-    background: #f4f4f4;
-    width: 100vw;
-    height: 120vh;
-    overflow: hidden;
-  }
-  .body__index .fondo_inicio .bold_uno {
-    display: flex;
-    z-index: -1;
-    position: absolute;
-    top: -300px;
-    left: -500px;
-    animation: 60s infinite linear gradienanimate;
-  }
-  .body__index .fondo_inicio .bold_dos {
-    display: flex;
-    z-index: -1;
-    position: absolute;
-    top: 100px;
-    left: -200px;
-    animation: 60s infinite linear reverse gradienanimate;
-  }
-  .body__index .fondo_inicio .bold_tres {
-    display: flex;
-    z-index: -1;
-    position: absolute;
-    bottom: -500px;
-    right: -400px;
-    animation: 60s infinite linear gradienanimate;
-  }
-  .body__index .fondo_inicio .fondo_blur {
-    display: none;
-    z-index: 0;
-    width: 100vw;
-    height: 100%;
-    background: repeating-radial-gradient(rgba(255, 255, 255, 0) 0 0.0001%, rgba(255, 255, 255, 0) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 255, 255, 0) 0 0.0001%, rgba(255, 255, 255, 0) 0 0.0002%) 40% 40%/3000px 3000px;
-    background-blend-mode: difference;
-    -webkit-backdrop-filter: blur(30px);
-            backdrop-filter: blur(30px);
-  }
-  .body__index .fondo_inicio .fondo_blur_movil {
-    display: flex;
-    z-index: 0;
-    width: 100vw;
-    height: 100%;
-    background-blend-mode: difference;
-    -webkit-backdrop-filter: blur(30px);
-            backdrop-filter: blur(30px);
-  }
-  .body__index .fondo_inicio #canvasindex {
-    z-index: -500;
-    display: none;
-  }
   .body__index .cont_cinta_inicio {
-    margin-top: 3em;
+    margin-top: 0em;
     position: relative;
     width: 100%;
+    opacity: 0;
   }
   .body__index .cont_cinta_inicio .slider_inicio {
     position: absolute;
@@ -4675,7 +4486,7 @@ p {
   .body__index .cont_cinta_inicio .slider_inicio .slide-track .slide p {
     padding-top: 10px;
     padding-bottom: 10px;
-    color: #ffffff;
+    color: #0c0c0c;
     text-align: center;
     font-family: MargoBeuys;
     font-size: calc(1px + 15vw);
