--- a/style/sass.css
+++ b/style/sass.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,700&display=swap");
 @font-face {
@@ -2688,9 +2689,10 @@ p {
 .body__index .conten_setion_uno {
   position: relative;
   margin: 0px 5em 0px 5em;
-  height: 90vh;
+  height: 88vh;
   display: flex;
   align-items: center;
+  z-index: 99;
 }
 .body__index .conten_setion_uno .titulo_setion_uno {
   display: flex;
@@ -2721,7 +2723,7 @@ p {
   transform: translateY(130%);
 }
 .body__index .conten_setion_uno .titulo_setion_uno h1 .titulo p strong {
-  font-family: Gambetta;
+  font-family: "Playfair Display", serif;
   font-style: italic;
   font-weight: 500;
 }
@@ -2750,7 +2752,7 @@ p {
 .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores .cont_parrafo_contadores .parrafo {
   color: #252525;
   text-align: center;
-  font-family: poppins;
+  font-family: Gotham;
   font-size: calc(1px + 1.2vw);
   font-style: normal;
   font-weight: 300;
@@ -2776,7 +2778,7 @@ p {
   background: #ffffff;
   color: #000;
   font-family: Gotham;
-  font-size: 15px;
+  font-size: 13px;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
@@ -2793,7 +2795,7 @@ p {
   gap: 10px;
   color: #fff;
   font-family: poppins;
-  font-size: 15px;
+  font-size: 13px;
   font-style: normal;
   font-weight: 300;
   line-height: normal;
@@ -4376,9 +4378,9 @@ p {
     transform: translateY(170%);
   }
   .body__index .conten_setion_uno .titulo_setion_uno h1 .titulo p strong {
-    font-family: Gambetta;
+    font-family: "Playfair Display", serif;
     font-style: italic;
-    font-weight: 500;
+    font-weight: 700;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
     width: 100%;
@@ -4637,13 +4639,14 @@ p {
   .body__index .mis_servicios {
     display: flex;
     flex-direction: column;
+    height: 100vh;
   }
   .body__index .mis_servicios .cont_titulo_mis_servicios {
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 5px;
-    margin: 3em 1em 1em 1em;
+    margin: 3em 1em 3em 1em;
   }
   .body__index .mis_servicios .cont_titulo_mis_servicios .titulo {
     color: #000;
@@ -5007,35 +5010,6 @@ p {
   .body__index .conten_anima_3d {
     position: relative;
   }
-  .body__index .conten_anima_3d .cont_figure_geometric_uno {
-    display: flex;
-    position: absolute;
-    z-index: 100;
-    width: 250px;
-    height: 250px;
-    left: 5em;
-    top: 5em;
-  }
-  .body__index .conten_anima_3d .bandera {
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    justify-content: center;
-    align-items: center;
-  }
-  .body__index .conten_anima_3d .bandera .titulo_bandera {
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-    position: absolute;
-    color: #000000;
-    text-align: center;
-    font-family: Sora;
-    font-size: calc(1px + 9vw);
-    font-style: normal;
-    font-weight: 900;
-    line-height: 115.5%;
-    text-transform: uppercase;
-  }
   .body__index .conten_anima_3d .mis_servicios {
     display: flex;
     flex-direction: column;
@@ -5046,6 +5020,7 @@ p {
     flex-direction: column;
     align-items: flex-start;
     gap: 5px;
+    margin: 3em 1em 3em 1em;
   }
   .body__index .conten_anima_3d .mis_servicios .cont_titulo_mis_servicios .titulo {
     color: #000;
