--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -8,6 +8,8 @@
   src: url(../assets/font/MargoBeuys.otf);
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,700&display=swap");
