--- a/style/sass.css
+++ b/style/sass.css
@@ -1020,13 +1020,13 @@ p {
     overflow: hidden;
   }
   .conte__menu .header__index .cont__logo__nav {
-    transform: scale(0.8) translateY(-70px);
+    transform: scale(0.8);
     z-index: 1000;
     filter: invert(100%);
     align-items: center;
   }
   .conte__menu .header__index .icono-menu {
-    transform: scale(0.8) translateY(-70px);
+    transform: scale(0.8);
     z-index: 1000;
     margin-right: -5px;
     width: 50px;
@@ -2692,7 +2692,7 @@ p {
   height: 88vh;
   display: flex;
   align-items: center;
-  z-index: 99;
+  z-index: 8;
 }
 .body__index .conten_setion_uno .titulo_setion_uno {
   display: flex;
@@ -4343,7 +4343,7 @@ p {
   .body__index .conten_setion_uno {
     position: relative;
     margin: 0px 1em 0px 1em;
-    z-index: 99;
+    z-index: 8;
     height: 70vh;
   }
   .body__index .conten_setion_uno .titulo_setion_uno {
